[metadata]
name = pyLOOKinRemote
version = 2021.11.25
author = John Crawford
author_email = jtcrwfrd@gmail.com
description = Unofficial Python module for interacting with LOOKin Remote devices, largely using LOOKin's API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/defcello/pyLOOKinRemote
project_urls =
    Bug Tracker = https://github.com/defcello/pyLOOKinRemote/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    zeroconf

[options.packages.find]
where=src